[gd_scene load_steps=14 format=3 uid="uid://depddspqh081"]

[ext_resource type="Theme" uid="uid://buv5pymjub15j" path="res://Lobby/Lobby.tres" id="1_teait"]
[ext_resource type="Script" path="res://Gui/Gui.gd" id="2_u8lm1"]
[ext_resource type="Script" path="res://Player/Minimap.gd" id="2_xvl7g"]
[ext_resource type="StyleBox" uid="uid://bo24lcik86rxc" path="res://Gui/Frame.tres" id="3_6y0qn"]
[ext_resource type="Texture2D" uid="uid://xsldysy1lwih" path="res://Gui/MapFrame.svg" id="4_tsjtx"]
[ext_resource type="Script" path="res://Gui/Announcer.gd" id="5_q2457"]
[ext_resource type="Script" path="res://Lobby/Console.gd" id="7_2k4gt"]

[sub_resource type="Animation" id="Animation_svjyg"]
resource_name = "MoneyPulse"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_styles/normal:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0.588235), Color(0.490196, 0.345098, 0.0470588, 0.588235), Color(0, 0, 0, 0.588235)]
}

[sub_resource type="Animation" id="Animation_qr2sq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_styles/normal:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0.588235)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fo0dk"]
_data = {
"MoneyPulse": SubResource("Animation_svjyg"),
"RESET": SubResource("Animation_qr2sq")
}

[sub_resource type="Animation" id="Animation_bq5af"]
resource_name = "Announcement"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 3, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_hwukp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ca8q6"]
_data = {
"Announcement": SubResource("Animation_bq5af"),
"RESET": SubResource("Animation_hwukp")
}

[node name="Gui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_teait")
script = ExtResource("2_u8lm1")

[node name="Hud" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -260.0
offset_bottom = 260.0
grow_horizontal = 0
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="ColorRect" type="ColorRect" parent="Hud"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="Hud/ColorRect"]
layout_mode = 2
offset_right = 250.0
offset_bottom = 250.0

[node name="Minimap" type="SubViewportContainer" parent="Hud/ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="Hud/ColorRect/VBoxContainer/Minimap"]
transparent_bg = true
handle_input_locally = false
msaa_3d = 1
size = Vector2i(250, 250)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="Hud/ColorRect/VBoxContainer/Minimap/SubViewport" groups=["Interface"]]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 100, 0)
current = true
fov = 70.0
size = 80.0
far = 600.0
script = ExtResource("2_xvl7g")

[node name="Location" type="Label" parent="Hud/ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = ExtResource("3_6y0qn")
horizontal_alignment = 1

[node name="MoneyLabel" type="Label" parent="Hud/ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = ExtResource("3_6y0qn")
text = "ยง 0"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Hud/ColorRect/VBoxContainer/MoneyLabel"]
libraries = {
"": SubResource("AnimationLibrary_fo0dk")
}

[node name="FpsOverlay" type="Label" parent="Hud/ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "39fps"
horizontal_alignment = 2
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="Hud/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = -3

[node name="TextureRect" type="TextureRect" parent="Hud/ColorRect/MarginContainer"]
layout_mode = 2
texture = ExtResource("4_tsjtx")

[node name="DebugItemList" type="ItemList" parent="."]
clip_contents = false
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
offset_left = 10.0
offset_top = 10.0
offset_right = 210.0
offset_bottom = 20.0
auto_height = true
fixed_column_width = 100
metadata/_edit_use_anchors_ = true

[node name="Announcer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_teait")
script = ExtResource("5_q2457")

[node name="Label" type="Label" parent="Announcer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_styles/normal = ExtResource("3_6y0qn")
text = " Announced "
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Announcer"]
libraries = {
"": SubResource("AnimationLibrary_ca8q6")
}

[node name="FpsTmer" type="Timer" parent="."]

[node name="Notifications" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(300, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = -1.0
offset_right = 150.0
offset_bottom = -1.0
grow_horizontal = 2
theme_override_constants/separation = 0

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -112.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 8

[node name="Console" type="ItemList" parent="ScrollContainer" groups=["Console"]]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
auto_height = true
item_count = 6
same_column_width = true
item_0/text = "lalalal"
item_1/text = "2. zeile"
item_2/text = "3"
item_3/text = "4"
item_4/text = "5"
item_5/text = "3"
script = ExtResource("7_2k4gt")

[connection signal="timeout" from="FpsTmer" to="." method="_on_fps_tmer_timeout"]
